# Innowise-internship-backend

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  fixtures.json  pyproject.toml
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/serializers/: user_registration_serializer.py  user_serializer.py
accounts/tests/: registration_tests.py
authentication/: admin.py  backends.py  models.py  services.py  test_utils.py  tests.py  urls.py  utils.py  utils_tests.py  views.py
authentication/migrations/: 0001_initial.py
authentication/serializers/: login_serializer.py  password_reset_serializer.py  refresh_token_serializer.py
authentication/services/: jwt_token_generation.py  refresh_token_validation_service.py  user_validation_service.py
authentication/tests/: backend_tests.py  login_tests.py  refresh_tests.py  utils_tests.py
exceptions/: jwt_token_exceptions.py  utils.py
innotter/: access_token_exceptions.py  jwt_token_exceptions.py  middleware.py  middleware_tests.py  settings.py  urls.py  utils.py
posts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0001_squashed_0004_alter_post_title.py  0002_alter_post_reply_to.py  0003_post_title.py  0004_alter_post_title.py  0005_page_is_permanent_blocked.py  0006_alter_page_follow_requests_alter_page_followers.py  0007_post_likes.py
rsa_keys/: authentication.py  private.pem  private_1.pem  public.pem  public_1.pem
(+16 files in other folders)
