[tool.poetry]
name = "iib-innoter"
version = "0.1.0"
description = ""
authors = ["Knooki <knukknakiknak@gmail.com>"]
readme = "README.md"
packages = [{include = "iib_innoter"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
